removed convention plugin, using subprojects